--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,16 @@ banner: 'default'
 <h1 style="font-size: 1.35em; text-align: center; font-weight: bold; color: #99b6b9">From Apps to Exploits, Games to Mods, the one website for all things PS2 Homebrew</h1>
 </br></br></br></br></br>
 
+<style>
+body {
+  background-image: url('/assets/images/ps2wiki_bg.jpg');
+}
+</style>
+
+
+<!-- Position --> <div style="left: 0px; width: 100%; position: absolute; margin: auto">
+  
+<!-- News & TOS --> <div style="padding-left: 25px; padding-right: 25px">
 <!-- Terms of Service Notice -->
 <div id="termsofservice" class="tos">
   <span class="clbtn" onclick="this.parentElement.style.display='none';"></span>
@@ -22,18 +32,8 @@ banner: 'default'
     tos.style.display='none' ;
   },10000);
 </script></br>
-
-
-<style>
-body {
-  background-image: url('/assets/images/ps2wiki_bg.jpg');
-}
-</style>
-
-
-<!-- Position --> <div style="left: 0px; width: 100%; position: absolute; margin: auto">
   
-<!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div class="home_news_block">
+<!-- News --> <div class="home_news_block">
 <img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">Open PS2 Loader v1.2.0-Beta-2173 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !</strong></div></div>
 
 <!-- Site Guide & Latest Posts --> <div class="home_multi_post_block">
