--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -385,7 +385,7 @@ table {
 /* tos */
 .tos {
   padding: 15px;
-  background-color: #9c8dc2; 
+  background-color: #5d507f; 
   border-radius: 5px;
   border-style: outset;
   border-color: #4f515c;
