--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -388,7 +388,7 @@ table {
   background-color: #5d507f; 
   border-radius: 5px;
   border-style: outset;
-  border-color: #4f515c;
+  border-color: #990000;
   color: wheat;
   float: center;
   margin-bottom: 15px;
