--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -387,7 +387,7 @@ table {
   padding: 15px;
   background-color: #5d507f; 
   border-radius: 5px;
-  border-style: outset;
+  border-style: double;
   border-color: #990000;
   color: wheat;
   float: center;
