--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -385,7 +385,7 @@ table {
 /* tos */
 .tos {
   padding: 15px;
-  background-color: #5d507f; 
+  background-color: #514769; 
   border-radius: 5px;
   border-style: double;
   border-color: #990000;
