--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -399,7 +399,7 @@ table {
   margin-left: 15px;
   color: white;
   font-weight: bold;
-  float: right;
+  float: left;
   font-size: 22px;
   cursor: pointer;
 }
