--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -387,8 +387,7 @@ table {
   padding: 15px;
   background-color: #514769; 
   border-radius: 5px;
-  border-style: double;
-  border-color: #990000;
+  border: 5px double #990000; 
   color: wheat;
   float: center;
   margin-bottom: 15px;
