--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,10 +1,9 @@
 ---
 layout: post
 hidden:
+  - header
+  - navigator
   - related_posts
 ---
-
-<h1 style="font-size: 27.5px">➤ About</h1>
-<hr></br>
 
 {{ content }}
