--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,8 +24,8 @@ body {
   
 <!-- Terms of Service Notice -->
 <div id="termsofservice" class="tos">
+  <span class="clbtn" onclick="this.parentElement.style.display='none';"><i class="fa fa-times-circle"></i></span>
   <strong>Important:</strong> Please read the <a href="https://ps2wiki.github.io/about.html#Terms-of-Service">Terms of Service</a> in <a href="https://ps2wiki.github.io/about.html">About</a> before using the site. Thankyou.
-  <span style="float: right" class="closebtn" onclick="this.parentElement.style.display='none';"><i class="fa fa-times-circle"></i></span>
 </div>
 
 <script>
