--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,9 +1,6 @@
 ---
-layout: post
-hidden:
-  - header
-  - navigator
-  - related_posts
+layout: framework
+sidebar: common-list
 ---
 
 <h1 style="font-size: 27.5px">➤ About</h1>
