--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,5 +1,10 @@
 ---
 layout: post
+sidebar: common-list
+hidden:
+  - header
+  - navigator
+  - related_posts
 ---
 
 <h1 style="font-size: 27.5px">➤ About</h1>
