--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -11,12 +11,14 @@
             | replace: '(p)', '℗'
             | replace: '(cleft)', '<span class="copyleft">&copy;</span>'
         -%}
+      <div style="float: left; width: 50%">
       <div>{{ copyright }}</div>
       <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
       generator." href="https://jekyllrb.com/">Jekyll</a> &amp; <a title="Yat, yet
-      another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>.</div>
-      <div><a title="Link to PS2 Space Discord Server" href="https://discord.gg/kCYbSF6tbx">Join the PS2 Space Discord Server!</a></div>
-      <!-- <div class="footer-col rss-subscribe">Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></div> -->
+      another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>.</div></div>
+       <div style=" float: right; width: 50%">  
+      <div><a title="Terms of Service - PS2Wiki" href="https://ps2wiki.github.io/about.html#terms-of-service">Terms of Service</a></div>
+      <!-- <div class="footer-col rss-subscribe">Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></div> --></div>
     </div>
   </div>
 </footer>
