--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -14,6 +14,9 @@ layout: default
     line-height: 1;
     letter-spacing: -1px;
   }
+  body {
+  background-image: url('/assets/images/404_rsod.png');
+}
 </style>
 
 <div class="container">
