--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -16,6 +16,8 @@ layout: default
   }
   body {
   background-image: url('/assets/images/404_rsod.png');
+  background-position: center; 
+  background-size: cover;
 }
 </style>
 
