--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -7,6 +7,7 @@ layout: default
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
+    color: #4d5d53
   }
   h1 {
     margin: 30px 0;
