--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -7,7 +7,8 @@ layout: default
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
-    color: #4d5d53
+    color: #4d5d53;
+    text-shadow: 0 0 3px #ffffff, 0 0 5px #ffffff
   }
   h1 {
     margin: 30px 0;
