--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -8,7 +8,7 @@ layout: default
     max-width: 600px;
     text-align: center;
     color: #4d5d53;
-    text-shadow: 0 0 3px #ffffff, 0 0 5px #ffffff
+    text-shadow: 0 0 3px #976363, 0 0 5px #976363
   }
   h1 {
     margin: 30px 0;
