--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -7,8 +7,8 @@ layout: default
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
-    color: #ffe599;
-    text-shadow: 0 0 3px #4d5d53, 0 0 5px #4d5d53
+    color: #000000;
+    text-shadow: 0 0 7px #4d5d53, 0 0 7px #4d5d53
   }
   h1 {
     margin: 30px 0;
