--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -7,8 +7,7 @@ layout: default
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
-    color: #000000;
-    text-shadow: 0 0 7px #4d5d53, 0 0 7px #4d5d53
+    text-shadow: 0 0 15px #000000, 0 0 15px #000000
   }
   h1 {
     margin: 30px 0;
