--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -7,7 +7,7 @@ layout: default
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
-    color: #444444
+    color: #444444;
     text-shadow: 0 0 15px #000000, 0 0 15px #000000
   }
   h1 {
