--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -18,7 +18,7 @@ layout: default
   }
   body {
   background-image: url('/assets/images/404_rsod.png');
-  background-position: center; 
+  background-position: no-repeat;
   background-size: cover;
 }
 </style>
