--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -8,6 +8,7 @@ layout: default
     max-width: 600px;
     text-align: center;
     color: #9dac97;
+     text-shadow: 0 0 3px #000000, 0 0 5px #000000
   }
   h1 {
     margin: 30px 0;
