--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,7 @@ banner: 'default'
 <style>
 body {
   background-image: url('/assets/images/ps2wiki_bg.jpg');
+  background-position: no-repeat;
 }
 </style>
 
