--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,7 @@ banner: 'default'
 body {
   background-image: url('/assets/images/ps2wiki_bg.jpg');
   background-position: no-repeat;
+  background-size: auto 100%;
 }
 </style>
 
