--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,17 +8,8 @@ banner: 'default'
 
 <!-- Position --> <div style="left: 0px; width: 100%; position: absolute; margin: auto">
 <div style="padding-left: 25px; padding-right: 25px">
-  
-<!-- Page begins -->
-<h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
-<h1 style="font-size: 1.35em; text-align: center; font-weight: bold; color: #99b6b9">From Apps to Exploits, Games to Mods, the one website for all things PS2 Homebrew</h1>
-</br></br></br></br></br>
-<style>
-body {
-  background-image: url('/assets/images/ps2wiki_bg.jpg');
-}
-</style>
 
+ <div style="position: absolute">
 <!-- Terms of Service Notice -->
 <div id="termsofservice" class="tos">
   <span class="clbtn" onclick="this.parentElement.style.display='none';"><i class="fa fa-times-circle"></i></span>
@@ -29,7 +20,17 @@ setTimeout(()=>{
     const tos=document.getElementById('termsofservice');
     tos.style.display='none' ;
   },10000);
-</script></br>
+</script></br></div>
+  
+<!-- Page begins -->
+<h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
+<h1 style="font-size: 1.35em; text-align: center; font-weight: bold; color: #99b6b9">From Apps to Exploits, Games to Mods, the one website for all things PS2 Homebrew</h1>
+</br></br></br></br></br>
+<style>
+body {
+  background-image: url('/assets/images/ps2wiki_bg.jpg');
+}
+</style>
 
 <!-- News --> <div class="home_news_block">
 <img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">Open PS2 Loader v1.2.0-Beta-2173 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !</strong></div></div>
