--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,19 +8,6 @@ banner: 'default'
 
 <!-- Position --> <div style="left: 0px; width: 100%; position: absolute; margin: auto">
 <div style="padding-left: 25px; padding-right: 25px">
-
- <div style="position: absolute">
-<!-- Terms of Service Notice -->
-<div id="termsofservice" class="tos">
-  <span class="clbtn" onclick="this.parentElement.style.display='none';"><i class="fa fa-times-circle"></i></span>
-  <strong>Important:</strong> Please read the <a href="https://ps2wiki.github.io/about.html#terms-of-service">Terms of Service</a> in <a href="https://ps2wiki.github.io/about.html">About</a> before using the site. Thankyou.
-</div>
-<script>
-setTimeout(()=>{
-    const tos=document.getElementById('termsofservice');
-    tos.style.display='none' ;
-  },10000);
-</script></br></div>
   
 <!-- Page begins -->
 <h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
@@ -32,6 +19,19 @@ body {
 }
 </style>
 
+
+<!-- Terms of Service Notice -->
+<div style="position: absolute"><div id="termsofservice" class="tos">
+  <span class="clbtn" onclick="this.parentElement.style.display='none';"><i class="fa fa-times-circle"></i></span>
+  <strong>Important:</strong> Please read the <a href="https://ps2wiki.github.io/about.html#terms-of-service">Terms of Service</a> in <a href="https://ps2wiki.github.io/about.html">About</a> before using the site. Thankyou.
+</div>
+<script>
+setTimeout(()=>{
+    const tos=document.getElementById('termsofservice');
+    tos.style.display='none' ;
+  },10000);
+</script></br></div>
+ 
 <!-- News --> <div class="home_news_block">
 <img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">Open PS2 Loader v1.2.0-Beta-2173 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !</strong></div></div>
 
