--- a/_includes/views/pagination.html
+++ b/_includes/views/pagination.html
@@ -8,7 +8,7 @@
 {%- include functions.html func='get_value' default='z' -%}
 {%- assign image_style = return | append: '-image-style' -%}
 
-{%- if paginator.posts.size > 0 -%}
+{%- if paginator.posts.size < 6 -%}
 <div class="pagination">
   <!-- Post list links -->
   <ul class="post-list {{ image_style }}">
@@ -34,7 +34,7 @@
   </ul>
 
   <!-- Pagination links -->
-  {%- if paginator.posts.size < 6 -%}
+  {%- if paginator.posts.size < site.posts.size -%}
     {%- include views/paginator.html -%}
   {%- endif -%}
 </div>
