--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -83,7 +83,7 @@ setTimeout(()=>{
   {% if page.banner == nil %}
     {% assign banner = page.title %}
   {% endif %}
-    {{ post.top }}
+    {{ top-post }}
   {% include views/pagination.html %}
 </div></div>
 
