--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -84,7 +84,7 @@ setTimeout(()=>{
     {% assign banner = page.title %}
   {% endif %}
     {{ content }}
-  {% include views/pagination-home.html %}
+  {% include views/pagination.html %}
 </div></div>
 
 </div>
