--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -89,6 +89,6 @@ setTimeout(()=>{
 
 </div>
 
-<div style="left:0px; width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
+<div style="bottom: 0; left:0px; width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
   {%- include views/footer.html -%}
 </div></div>
