--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,8 @@ subheading: 'Your awesome subheading'
 banner: 'default'
 ---
 
+{% include daily_updates.html %}
+
 <!-- Position --> <div style="left: 0px; width: 100%; position: absolute; margin: auto">
 <div style="padding-left: 25px; padding-right: 25px">
   
@@ -34,7 +36,7 @@ setTimeout(()=>{
 </br></br></br></br></br>
   
 <!-- News --> <div class="home_news_block">
-<img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">Open PS2 Loader v1.2.0-Beta-2173 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !</strong></div></div>
+<img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em"> {{ page.news }} </strong></div></div>
 
 <!-- Site Guide & Latest Posts --> <div class="home_multi_post_block">
 
