--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,10 +36,15 @@ setTimeout(()=>{
 <!-- News --> <div class="home_news_block">
 <img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div>
 
-<!-- Site Guide & Latest Posts --> <div class="home_multi_post_block">
+<!-- Tips, Site Guide & Latest Posts --> <div class="home_multi_post_block">
 
 <div style="left: 10px; right: 12.5px">
 <div class="home_siteguide_and_misc_parent">
+<!-- Tips -->
+<div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #9aa1d7; color: #eeeeee" class="home_daily_tips">
+<img src="https://i.imgur.com/9iKDxAy.gif"/><strong style="font-size: 0.9em">{{ page.tips }}</strong></div></div>
+
+<!-- Site Guide -->
 <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <hr></br>
