--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,8 +41,8 @@ setTimeout(()=>{
 <div class="home_siteguide_and_misc_parent">
 
 <!-- Tips -->
-<div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #9aa1d7; color: #eeeeee" class="home_daily_tips">
-<img src="https://i.imgur.com/9iKDxAy.gif"/><strong style="font-size: 0.9em">{{ page.tips }}</strong></div></div>
+<div style="right: 12.5px; border-radius: 10px; padding: 5px; border: 3px outset #ffffff; background-color: #4e58a2; color: #eeeeee" class="home_daily_tips">
+<img src="https://i.imgur.com/TzjLn1t.gif"/><strong style="font-size: 0.9em">{{ page.tips }}</strong></div></div>
 </div></br>
   
 <!-- Site Guide -->
