--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,7 @@ setTimeout(()=>{
 
 <!-- Tips -->
 <div style="right: 12.5px; border-radius: 10px; padding: 5px; border: 3px outset #ffffff; background-color: #4e58a2; color: #eeeeee" class="home_daily_tips">
-<img src="https://i.imgur.com/2JFmpb9.gif"/>  
+<img src="https://i.imgur.com/jaqbxYW.gif"/></br>
 <strong style="font-size: 0.9em">{{ page.tips }}</strong>
 </div></br>
   
