--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,9 +41,9 @@ setTimeout(()=>{
 <div class="home_siteguide_and_misc_parent">
 
 <!-- Tips -->
-<div style="right: 12.5px; border-radius: 10px; padding: 5px; border: 3px outset #ffffff; background-color: #4e58a2; color: #eeeeee" class="home_daily_tips">
+<div style="right: 12.5px; border-radius: 10px; padding: 20px; border: 3px outset #ffffff; background-color: #4e58a2; color: #eeeeee" class="home_daily_tips">
 <img src="https://i.imgur.com/jaqbxYW.gif"/></br>
-<strong style="font-size: 0.9em"><div style="padding: 5px"></div>{{ page.tips }}</strong>
+<strong style="font-size: 0.9em">{{ page.tips }}</strong>
 </div></br>
   
 <!-- Site Guide -->
