--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -1,5 +1,5 @@
 ---
-layout: framework
+layout: post
 hidden:
   - header
   - navigator
@@ -11,3 +11,10 @@ hidden:
   - subtitle
 comments: false
 ---
+
+</br>
+<div style=" border-radius: 15px; padding: 30px; border: 5px outset white; background-color: #323843" class="homebrew_banner">
+<div style="float: left">{{ h.image }}</div>
+<div style="float: right"><h1 style="font-family: Montserrat; text-align: center; font-size: 3em; font-weight: bold; color: #ffe599">{{ h.title }}</h1>
+<h1 style="font-size: 1.25em; text-align: center; font-weight: bold; color: #99b6b9">{{ h.subtitle }}</h1> </div>
+</div>
