--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -14,7 +14,7 @@ comments: false
 
 </br>
 <div style=" border-radius: 15px; padding: 30px; border: 5px outset white; background-color: #323843" class="homebrew_banner">
-<div style="float: left">{{ page.h-image }}</div>
-<div style="float: right"><h1 style="font-family: Montserrat; text-align: center; font-size: 3em; font-weight: bold; color: #ffe599">{{ page.h-title }}</h1>
+<div style="float: left; margin-right: 30px"></div>
+<div style="float: left"><h1 style="font-family: Montserrat; text-align: center; font-size: 3em; font-weight: bold; color: #ffe599">{{ page.h-title }}</h1>
 <h1 style="font-size: 1.25em; text-align: center; font-weight: bold; color: #99b6b9">{{ page.h-subtitle }}</h1> </div>
 </div>
