--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -14,7 +14,7 @@ comments: false
 
 </br>
 <div style=" border-radius: 15px; padding: 30px; border: 5px outset white; background-color: #323843" class="homebrew_banner">
-<div style="float: left; margin-right: 30px; padding: 5px; border: 2px outset white"><img src="https://img.freepik.com/premium-photo/painting-blue-wave-with-green-background_1258935-2628.jpg"></div>
+<div style="float: left; margin-right: 30px; padding: 5px; border: 2px outset white"><img width="150" height="150" src="https://img.freepik.com/premium-photo/painting-blue-wave-with-green-background_1258935-2628.jpg"></div>
 <div style="float: left"><h1 style="font-family: Montserrat; text-align: left; font-size: 3em; font-weight: bold; color: #ffe599">{{ page.h-title }}</h1>
 <h1 style="font-size: 1.25em; text-align: center; font-weight: bold; color: #99b6b9">{{ page.h-subtitle }}</h1></div>
 </div>
