--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -11,13 +11,13 @@ hidden:
   - subtitle
 comments: false
 ---
-
+<div style="position: relative">
   <div style="border-radius: 15px; padding: 30px; border: 5px outset white; background-color: #323843">
     <div style="float: left; border-radius: 5px; margin-right: 30px; padding: 10px; border: 2px outset white"><img width="250" height="250" src="https://img.freepik.com/premium-photo/painting-blue-wave-with-green-background_1258935-2628.jpg"></div>
     <div style="float: left"><h1 style="font-family: Montserrat; text-align: left; font-size: 3em; font-weight: bold; color: #ffe599">{{ page.title }}</h1>
     <h1 style="font-size: 1.25em; text-align: left; font-weight: bold; color: #99b6b9">{{ page.h-subtitle }}</h1>
     </div>
-  </div>
+  </div></div>
   
 {{ content }}
 
