--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -11,7 +11,7 @@ hidden:
   - subtitle
 comments: false
 ---
-<div style="position: relative">
+<div style="position: static">
   <div style="border-radius: 15px; padding: 30px; border: 5px outset white; background-color: #323843">
     <div style="float: left; border-radius: 5px; margin-right: 30px; padding: 10px; border: 2px outset white"><img width="250" height="250" src="https://img.freepik.com/premium-photo/painting-blue-wave-with-green-background_1258935-2628.jpg"></div>
     <div style="float: left"><h1 style="font-family: Montserrat; text-align: left; font-size: 3em; font-weight: bold; color: #ffe599">{{ page.title }}</h1>
