--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -11,13 +11,13 @@ hidden:
   - subtitle
 comments: false
 ---
-<div style="width: 30%">
-  <div style="position: fixed; border-radius: 15px; padding: 30px; border: 5px outset white; background-color: #323843">
-    <div style="float: left; border-radius: 5px; padding: 10px; border: 2px outset white"><img width="150" height="150" src="https://img.freepik.com/premium-photo/painting-blue-wave-with-green-background_1258935-2628.jpg"></div>
+
+<div style="width: 80%">
+  <div style="position: absolute; border-radius: 15px; padding: 30px; border: 5px outset white; background-color: #323843">
+    <div style="float: left; border-radius: 5px; margin-right: 30px; padding: 10px; border: 2px outset white"><img width="150" height="150" src="https://img.freepik.com/premium-photo/painting-blue-wave-with-green-background_1258935-2628.jpg"></div>
     <div style="float: left"><h1 style="font-family: Montserrat; text-align: left; font-size: 2em; font-weight: bold; color: #ffe599">{{ page.title }}</h1>
-    <div style="font-size: 0.9em; text-align: left; font-weight: bold; color: #99b6b9">{{ page.h-subtitle }}</div>
+    <h1 style="font-size: 0.9em; text-align: left; font-weight: bold; color: #99b6b9">{{ page.h-subtitle }}</h1>
     </div>
   </div></div>
-  
-{{ content }}
 
+{{ content }}
