--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -18,7 +18,7 @@
       another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>.</div>
       <div class="footer-col rss-subscribe">Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></div>
       </div>
-      <div style=" float: right; width: 50%">  
+      <div style="float: right; width: 50%; text-align: right">  
       <div><a title="Terms of Service - PS2Wiki" href="https://ps2wiki.github.io/about.html#terms-of-service">Terms of Service</a></div>
       </div>
     </div>
