--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -12,8 +12,8 @@ hidden:
 comments: false
 ---
 
-<div style="width: 80%">
-  <div style="position: absolute; border-radius: 15px; padding: 30px; border: 5px outset white; background-color: #323843">
+<div style="">
+  <div style="width: 50%; position: absolute; border-radius: 15px; padding: 30px; border: 5px outset white; background-color: #323843">
     <div style="float: left; border-radius: 5px; margin-right: 10px; padding: 10px; border: 2px outset white"><img width="150" height="150" src="https://img.freepik.com/premium-photo/painting-blue-wave-with-green-background_1258935-2628.jpg"></div>
     <div style="float: left"><h1 style="font-family: Montserrat; text-align: left; font-size: 2em; font-weight: bold; color: #ffe599">{{ page.title }}</h1>
     <div style="font-size: 0.9em; text-align: left; font-weight: bold; color: #99b6b9">{{ page.h-subtitle }}</div>
