--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -13,7 +13,7 @@ comments: false
 ---
 <div style="border-radius: 10px; padding: 30px; border: 3px outset wheat; background-color: #323843">
     <div style="float: left; border-radius: 5px; margin-right: 10px; padding: 10px; border: 2px outset white"><img width="150" height="150" src="https://img.freepik.com/premium-photo/painting-blue-wave-with-green-background_1258935-2628.jpg"></div>
-    <div style="float: left"><h1 style="font-family: Montserrat; text-align: left; font-size: 2em; font-weight: bold; color: #ffe599">{{ page.title }}</h1></br>
+    <div style="float: right"><h1 style="font-family: Montserrat; text-align: left; font-size: 2em; font-weight: bold; color: #ffe599">{{ page.title }}</h1></br>
     <p style="font-size: 0.9em; text-align: left; font-weight: bold; color: #99b6b9">{{ page.h-subtitle }}</p></div></br></br></br>
 </div>  
 
