--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -357,7 +357,8 @@ table {
 
 }
 
-/*------------------- HOMEBREW DIVS -------------------*/
+/*------------------- Homebrew Section -------------------*/
+
 .homebrew_div {
   overflow: hidden; 
   height: 172.22px; 
