--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -367,8 +367,8 @@ table {
 @media (max-width: 400px) {
   
   .homebrew_div {
-    overflow: visible; 
-    height: 700px; 
+    overflow: scroll; 
+    height: 500px; 
     }
   
 }
