--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -12,9 +12,9 @@ hidden:
 comments: false
 ---
 <div style="border-radius: 10px; padding: 30px; border: 3px outset wheat; background-color: #215864" class="homebrew_div">
-    <div style="float: left; height: 0; width: 20%; padding-bottom: 20%"><div style="position: absolute; border-radius: 5px; margin-right: 25px; padding: 10px; border: 2px outset white"><img width="150" height="150" src="https://img.freepik.com/premium-photo/painting-blue-wave-with-green-background_1258935-2628.jpg"></div></div>
-    <div style="display: flex; flex-direction: column"><div style="float: right; width: 80%"><h1 style="font-family: Montserrat; text-align: left; font-size: 2.5em; font-weight: bold; color: #ffe599">{{ page.title }}</h1></div></br>
-    <div style="float: right; width: 80%"><p style="font-size: 1.0em; text-align: left; font-weight: bold; color: #99b6b9">{{ page.subtitle }}</p></div></div>
+    <div style="float: left; margin-right: 25px; height: 0; width: 20%; padding-bottom: 20%"><div style="position: absolute; border-radius: 5px; padding: 10px; border: 2px outset white"><img width="150" height="150" src="https://img.freepik.com/premium-photo/painting-blue-wave-with-green-background_1258935-2628.jpg"></div></div>
+    <div style="display: flex; flex-direction: column"><div style="float: right"><h1 style="font-family: Montserrat; text-align: left; font-size: 2.5em; font-weight: bold; color: #ffe599">{{ page.title }}</h1></div></br>
+    <div style="float: right"><p style="font-size: 1.0em; text-align: left; font-weight: bold; color: #99b6b9">{{ page.subtitle }}</p></div></div>
 </div>  
 
 </br><hr></br>
