--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -17,6 +17,10 @@ comments: false
     <div style="float: right"><p style="font-size: 1.0em; text-align: left; font-weight: bold; color: #99b6b9">{{ page.subtitle }}</p></div></div>
 </div>  
 
-</br><hr></br>
+</br><hr>
+<div style="display: flex">
+<div style="float: left; color: wheat"><i class="fas fa-history"></i> Last Updated: {{ page.last_updated }}</div>
+<div style="float: right; color: wheat"><i class="fas fa-code"></i> Project Status: {{ page.project_status }}</div>
+</br>
  
 {{ content }}
