--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -19,8 +19,8 @@ comments: false
 
 </br><hr>
 <div style="display: flex">
-<div style="float: left; color: wheat"><i class="fas fa-history"></i> Last Updated: {{ page.last_updated }}</div>
-<div style="float: right; color: wheat"><i class="fas fa-code"></i> Project Status: {{ page.project_status }}</div>
+<div style="float: left; color: wheat"><i class="fa fa-history"></i> Last Updated: {{ page.last_updated }}</div>
+<div style="float: right; color: wheat"><i class="fa fa-code"></i> Project Status: {{ page.project_status }}</div></div>
 <hr></br>
  
 {{ content }}
