--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -18,7 +18,7 @@ comments: false
 </div>  
 
 </br><hr>
-<div style="display: flex">
+<div style="">
 <div style="float: left; color: wheat"><i class="fa fa-history"></i> Last Updated: {{ page.last_updated }}</div>
 <div style="float: right; color: wheat"><i class="fa fa-code"></i> Project Status: {{ page.project_status }}</div></div>
 <hr></br>
