--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -19,8 +19,8 @@ comments: false
 
 </br><hr>
 <div style="">
-<div style="float: left; color: wheat" class="homebrew_tags"><strong><i class="fa fa-history"></i> Last Updated:</strong> {{ page.last_updated }}</div>
-<div style="float: right; color: wheat" class="homebrew_tags"><strong><i class="fa fa-code"></i> Project Status:</strong> {{ page.project_status }}</div></div>
+<div style="color: wheat" class="homebrew_tags_l"><strong><i class="fa fa-history"></i> Last Updated:</strong> {{ page.last_updated }}</div>
+<div style="color: wheat" class="homebrew_tags_r"><strong><i class="fa fa-code"></i> Project Status:</strong> {{ page.project_status }}</div></div>
 </br></br><hr></br>
  
 {{ content }}
