--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -367,12 +367,12 @@ table {
 
  .homebrew_tag_l {
     flow: left;
-    text-align: center;
+    text-align: left;
   }
   
   .homebrew_tag_r {
     flow: right;
-    text-align: center;
+    text-align: right;
   }
 
 @media (max-width: 400px) {
