--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -385,11 +385,13 @@ table {
   .homebrew_tag_l {
     flow: center;
     text-align: center;
+    width: 50%
   }
   
   .homebrew_tag_r {
     flow: center;
     text-align: center;
+    width: 50%
   }
 }
 
