--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -19,8 +19,8 @@ comments: false
 
 </br><hr>
 <div style="">
-<div class="homebrew_tags_l"><div><strong><i class="fa fa-history"></i> Last Updated:</strong> {{ page.last_updated }}</div></div>
-<div class="homebrew_tags_r"><div><strong><i class="fa fa-code"></i> Project Status:</strong> {{ page.project_status }}</div></div></div>
+<div class="homebrew_tag_l"><div><strong><i class="fa fa-history"></i> Last Updated:</strong> {{ page.last_updated }}</div></div>
+<div class="homebrew_tag_r"><div><strong><i class="fa fa-code"></i> Project Status:</strong> {{ page.project_status }}</div></div></div>
 </br></br><hr></br>
  
 {{ content }}
