--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -386,12 +386,12 @@ table {
   
   .homebrew_tag_l {
     flow: center;
-    text-align: center;
+    text-align: left;
   }
   
   .homebrew_tag_r {
     flow: center;
-    text-align: center;
+    text-align: left;
   }
 }
 
