--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -11,6 +11,7 @@ hidden:
   - subtitle
 comments: false
 ---
+
 <div style="border-radius: 10px; padding: 30px; border: 3px outset wheat; background-color: #215864" class="homebrew_div">
     <div style="height: 0; width: 30%; padding-bottom: 15%">
       <div style="float: left; margin-right: 25px; border-radius: 5px; padding: 10px; border: 2px outset white">
@@ -28,7 +29,8 @@ comments: false
 </div>  
 
 </br><hr>
-<div style="display: flex">
+
+<div>
   <div class="homebrew_tag_l">
     <div><strong><i class="fa fa-history"></i> Last Updated:</strong> {{ page.last_updated }}</div>
   </div>
@@ -36,6 +38,7 @@ comments: false
     <div><strong><i class="fa fa-code"></i> Project Status:</strong> {{ page.project_status }}</div>
   </div>
 </div>
+
 </br><hr></br>
  
 {{ content }}
