--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -362,17 +362,18 @@ table {
 .homebrew_div {
   display: flex;
   flex-direction: row;
-  
   }
 
  .homebrew_tag_l {
     flow: left;
     text-align: left;
+    width: 50%;
   }
   
   .homebrew_tag_r {
     flow: right;
     text-align: right;
+    width: 50%;
   }
 
 @media (max-width: 400px) {
