--- a/_layouts/homebrew.html
+++ b/_layouts/homebrew.html
@@ -30,13 +30,14 @@ comments: false
 
 </br><hr>
 
-<div class="homebrew_tag_l">
-  <div><strong><i class="fa fa-history"></i> Last Updated:</strong> {{ page.last_updated }}</div>
+<div class="homebrew_tags_container">
+  <div class="homebrew_tag_l">
+    <div><strong><i class="fa fa-history"></i> Last Updated:</strong> {{ page.last_updated }}</div>
+  </div>
+  <div class="homebrew_tag_r">
+    <div><strong><i class="fa fa-code"></i> Project Status:</strong> {{ page.project_status }}</div>
+  </div>
 </div>
-<div class="homebrew_tag_r">
-  <div><strong><i class="fa fa-code"></i> Project Status:</strong> {{ page.project_status }}</div>
-</div>
-
 </br><hr></br>
 
 
