--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -393,11 +393,13 @@ table {
   .homebrew_tag_l {
     flow: center;
     text-align: left;
+    width: 100%;
   }
   
   .homebrew_tag_r {
     flow: center;
     text-align: left;
+    width: 100%;
   }
 }
 
