--- a/_layouts/docs-homebrew.html
+++ b/_layouts/docs-homebrew.html
@@ -41,5 +41,6 @@ comments: false
 </div>
 </br><hr></br>
 
+<img src="https://c0.wallpaperflare.com/preview/87/678/343/gray-sony-ps2-console.jpg">
 
 {{ content }}
