--- a/_layouts/docs-homebrew.html
+++ b/_layouts/docs-homebrew.html
@@ -12,7 +12,7 @@ hidden:
 comments: false
 ---
 
-<div style="border-radius: 10px; padding: 30px; border: 3px outset wheat; background-image: url("https://c0.wallpaperflare.com/preview/87/678/343/gray-sony-ps2-console.jpg")" class="homebrew_div">
+<div style="border-radius: 10px; padding: 30px; border: 3px outset wheat; background-image: url('https://c0.wallpaperflare.com/preview/87/678/343/gray-sony-ps2-console.jpg')" class="homebrew_div">
     <div style="height: 0; width: 30%; padding-bottom: 15%">
       <div style="float: left; margin-right: 25px; border-radius: 5px; padding: 10px; border: 2px outset white">
         <img src="https://media.discordapp.net/attachments/1255864751444070422/1309522025781526570/Untitled-3.png?ex=6741e2ec&is=6740916c&hm=e16be9d0fc6b4c021d12106007554c86af9f5e28e4d9cff8ea58eed4b9ef23b4&=&format=webp&quality=lossless">
@@ -40,7 +40,5 @@ comments: false
   </div>
 </div>
 </br><hr></br>
-
-<img src="https://c0.wallpaperflare.com/preview/87/678/343/gray-sony-ps2-console.jpg">
 
 {{ content }}
