--- a/_layouts/docs-homebrew.html
+++ b/_layouts/docs-homebrew.html
@@ -20,10 +20,10 @@ comments: false
     </div></br>
     <div style="float: right; display: flex; flex-direction: column">
         <div style="float: right">
-           <h1 style="font-family: Montserrat; text-align: left; font-size: 2.5em; font-weight: bold; color: #ffe599">{{ page.title }}</h1>
+           <h1 style="font-family: Montserrat; text-align: left; font-size: 2.5em; font-weight: bold; color: #ffe599; text-shadow: 0 0 3px #000000, 0 0 5px #000000">{{ page.title }}</h1>
         </div></br>
         <div style="float: right">
-          <p style="font-size: 1.0em; text-align: left; font-weight: bold; color: #99b6b9">{{ page.subtitle }}</p>
+          <p style="font-size: 1.0em; text-align: left; font-weight: bold; color: #99b6b9; text-shadow: 0 0 3px #000000, 0 0 5px #000000">{{ page.subtitle }}</p>
         </div>
     </div>
 </div>  
