--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,6 +55,9 @@ setTimeout(()=>{
   <h3><a href="https://ps2wiki.github.io/get_started.html">➽ Get Started</a></h3>
   Everything you need to 'Get Started' with PS2 Modding! (>ᴗ•)
   </br></br><hr></br>
+  <h3><a href="https://ps2wiki.github.io/documentation">➽ Docs</a></h3>
+  Find documenation on specific Homebrew, Accessories & Mods here
+  </br></br><hr></br>
   <h3><a href="https://ps2wiki.github.io/links_and_sources.html">➽ Links & Sources</a></h3>
   Useful links to downloads and other resources
   </br></br><hr></br>
