--- a/_layouts/special-post.html
+++ b/_layouts/special-post.html
@@ -2,9 +2,7 @@
 layout: framework
 banner:
 banner_html: post-header.html
-hidden: []
-sidebar:
-  - none
+hidden: [sidebar]
 ---
 
 <div class="post">
