--- a/_layouts/special-post.html
+++ b/_layouts/special-post.html
@@ -2,7 +2,9 @@
 layout: framework
 banner:
 banner_html: post-header.html
-hidden: [sidebar]
+hidden: []
+sidebar:
+  - article-menu
 ---
 
 <div class="post">
