--- a/_layouts/docs-homebrew.html
+++ b/_layouts/docs-homebrew.html
@@ -35,7 +35,7 @@ hidden:
   <div class="homebrew_tag_l">
     <div><strong><i class="fa fa-history"></i> Last Updated:</strong> {{ page.last_updated }}</div>
     {% if page.authors %}
-    <div><strong><i class="fa fa-user-edit"></i> Authors:</strong> {{ page.authors }}</div>
+    <div><strong><i class="fa fa-user"></i> Authors:</strong> {{ page.authors }}</div>
     {% endif %}
   </div>
   <div class="homebrew_tag_r">
