--- a/_layouts/docs-homebrew.html
+++ b/_layouts/docs-homebrew.html
@@ -1,5 +1,5 @@
 ---
-layout: special-post
+layout: docs
 hidden:
   - header
   - navigator
@@ -30,6 +30,8 @@ hidden:
 
 
 </br><hr>
+
+{%- include sidebar/article-menu.html -%}
 
 <div class="homebrew_tags_container">
   <div class="homebrew_tag_l">
