--- a/_layouts/docs-accessories.html
+++ b/_layouts/docs-accessories.html
@@ -1,5 +1,5 @@
 ---
-layout: special-post
+layout: docs
 hidden:
   - header
   - navigator
@@ -9,6 +9,7 @@ hidden:
   - title
   - tags
   - subtitle
+  - sidebar
 ---
 
 <div style="border-radius: 10px; padding: 30px; border: 3px outset wheat; background-image: url('https://wallpapercave.com/wp/wp2328254.jpg'); background-position: center" class="homebrew_div">
@@ -30,12 +31,20 @@ hidden:
 
 </br><hr>
 
+{%- include sidebar/article-menu.html -%}
+
 <div class="homebrew_tags_container">
   <div class="homebrew_tag_l">
     <div><strong><i class="fa fa-history"></i> Last Updated:</strong> {{ page.last_updated }}</div>
+    {% if page.authors %}
+    <div><strong><i class="fa fa-user"></i> Authors:</strong> {{ page.authors }}</div>
+    {% endif %}
   </div>
   <div class="homebrew_tag_r">
     <div><strong><i class="fa fa-code"></i> Project Status:</strong> {{ page.project_status }}</div>
+    {% if page.factcheck %}
+    <div><strong><i class="fa fa-check-circle"></i> Factchecked:</strong> {{ page.factcheck }}</div>
+    {% endif %}
   </div>
 </div>
 </br><hr></br>
@@ -47,7 +56,6 @@ function srcThumbnail() {
 }
 srcThumbnail()
 </script>
-
 {% endif %}
 
 {{ content }}
