--- a/_layouts/docs-homebrew.html
+++ b/_layouts/docs-homebrew.html
@@ -16,7 +16,7 @@ hidden:
     <div style="height: 0; width: 30%; padding-bottom: 15%">
       <div style="float: left; margin-right: 25px; border-radius: 5px; padding: 10px; border: 2px outset white">
         <img id="thumbnail" src="https://img.freepik.com/premium-photo/painting-blue-wave-with-green-background_1258935-2628.jpg">
-      </br></div>
+      </div></br>
     </div></br>
     <div style="float: right; display: flex; flex-direction: column">
         <div style="float: right">
