--- a/_layouts/docs-accessories.html
+++ b/_layouts/docs-accessories.html
@@ -15,7 +15,7 @@ hidden:
 <div style="border-radius: 10px; padding: 30px; border: 3px outset wheat; background-image: url('https://wallpapercave.com/wp/wp2328254.jpg'); background-position: center" class="homebrew_div">
     <div style="height: 0; width: 30%; padding-bottom: 15%">
       <div style="float: left; margin-right: 25px; border-radius: 5px; padding: 10px; border: 2px outset white">
-        <img id="thumbnail" src="https://img.freepik.com/premium-photo/painting-blue-wave-with-green-background_1258935-2628.jpg">
+        <img maxwidth="150" maxheight="150" id="thumbnail" src="https://img.freepik.com/premium-photo/painting-blue-wave-with-green-background_1258935-2628.jpg">
       </div>
     </div></br>
     <div style="float: right; display: flex; flex-direction: column">
