--- a/_layouts/docs-homebrew.html
+++ b/_layouts/docs-homebrew.html
@@ -24,7 +24,7 @@ hidden:
         </div></br>
         <div style="float: right">
           <p style="font-size: 1.0em; text-align: left; font-weight: bold; color: #99b6b9; text-shadow: 0 0 3px #000000, 0 0 5px #000000">{{ page.subtitle }}</p>
-        </div>
+        </div></br>
     </div>
 </div>  
 
