--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -354,8 +354,63 @@ table {
   display: block; 
   margin-right: 12.5px;
   }
+
 }
+
+/*------------------- Homebrew Section -------------------*/
+
+.homebrew_div {
+  display: flex;
+  flex-direction: row;
+  }
+
+.homebrew_tags_container {
+  display: flex;
+}
+
+ .homebrew_tag_l {
+    flow: left;
+    text-align: left;
+    width: 50%;
+  }
   
+  .homebrew_tag_r {
+    flow: right;
+    text-align: right;
+    width: 50%;
+  }
+
+@media (max-width: 400px) {
+  
+  .homebrew_div {
+  display: flex;
+  flex-direction: column;
+    }
+  
+.homebrew_tags_container {
+  display: inline;
+}
+  .homebrew_tag_l {
+    flow: center;
+    text-align: left;
+    width: 100%;
+  }
+  
+  .homebrew_tag_r {
+    flow: center;
+    text-align: left;
+    width: 100%;
+  }
+}
+
+/*------------------- FOOTER-------------------*/
+
+@media (max-width: 400px) {
+.footer_font_adjust {
+  font-size: 0.75em;
+  }
+}
+
 /*------------------- ALERTS & WARNINGS -------------------*/
 
 /* warning */
@@ -379,6 +434,17 @@ table {
   padding: 20px;
   background-color: #274e13; 
   color: white;
+  margin-bottom: 15px;
+}
+
+/* tos */
+.tos {
+  padding: 10px;
+  background-color: #514769; 
+  border-radius: 5px;
+  border: 5px double #990000; 
+  color: wheat;
+  float: center;
   margin-bottom: 15px;
 }
 
