--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,8 @@
 ---
 layout: framework-home
 sidebar: category-list
-heading: 'Your awesome heading'
-subheading: 'Your awesome subheading'
+heading: PS2Wiki
+subheading: 'The PS2 Homebrew Wiki'
 banner: 'default'
 ---
 
@@ -34,7 +34,7 @@ setTimeout(()=>{
 </br></br></br></br></br>
   
 <!-- News --> <div class="home_news_block">
-<span>Previous News<sup>[↗]</sup></span>
+<span class="clbtn">Previous News<sup>[↗]</sup></span>
 <img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div>
 
 <!-- Tips, Site Guide & Latest Posts --> <div class="home_multi_post_block">
@@ -43,7 +43,7 @@ setTimeout(()=>{
 
 <!-- Tips -->
 <div style="right: 12.5px; border-radius: 10px; padding: 5px; padding-right: 10px; border: 3px outset #ffffff; background-color: #4e58a2; color: #eeeeee" class="home_daily_tips">
-<span>Previous Tips<sup>[↗]</sup></span><img src="https://i.imgur.com/jaqbxYW.gif"/><strong style="font-size: 1.0em">{{ page.tips }}</strong>
+<span class="clbtn">Previous Tips<sup>[↗]</sup></span><img src="https://i.imgur.com/jaqbxYW.gif"/><strong style="font-size: 1.0em">{{ page.tips }}</strong>
 </div></br>
   
 <!-- Site Guide -->
