--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -3,7 +3,7 @@ layout: framework
 sidebar: archive-list
 ---
 
-<h1 style="font-size: 27.5px">➤ Yearly Archives of all posts</h1>
+<h1 style="font-size: 27.5px">➤ Archive</h1>
 <hr></br>
 
 {{ content }}
