--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -8,6 +8,7 @@ hidden: [sidebar]
 <div class="post">
   <section>
 
+    {%- include extensions/mermaid.html -%}
     {%- assign name = 'banner' -%}
     {%- include functions.html func='get_value' -%}
     {%- assign banner = return -%}
