--- a/_layouts/news-and-tips.html
+++ b/_layouts/news-and-tips.html
@@ -1,15 +1,15 @@
 ---
 layout: docs
-#hidden:
-#  - header
-#  - navigator
-#  - related_posts
-#  - banner
-#  - image
-#  - title
-#  - tags
-#  - subtitle
-#  - sidebar
+hidden:
+  - header
+  - navigator
+  - related_posts
+  - banner
+  - image
+  - title
+  - tags
+  - subtitle
+  - sidebar
 ---
 
  {%- include extensions/mermaid.html -%}
